# libstrophe

./: .gitignore  Makefile.am  README.markdown  bootstrap.sh  configure.ac  couplet.h  coupletpp.h  libcouplet.pc.in  libstrophe.pc.in  strophe.h
examples/: active.c  basic.c  bot.c  roster.c
src/: auth.c  common.h  conn.c  ctx.c  event.c  handler.c  hash.c  hash.h  jid.c  list.c  list.h  md5.c  oocontext.cpp  oostanza.cpp  ostypes.h  parser.h  parser_expat.c  parser_libxml2.c  sasl.c  sasl.h  sha1.c  snprintf.c  sock.c  sock.h  stanza.c  thread.c  thread.h  tls.h  tls_dummy.c  tls_gnutls.c  tls_openssl.c  tls_schannel.c  util.c  util.h
tests/: check_parser.c  test_base64.c  test_ctx.c  test_hash.c  test_jid.c  test_sasl.c
